footer finished and navigation buttons on timeline no longer overlap with navbar

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -74,7 +74,7 @@
   top: 0;
   right: 0;
   margin: 10px;
-  z-index: 9999;
+  z-index: 100;
 }
 
 .vis-timeline {
